--- a/index.html
+++ b/index.html
@@ -6,6 +6,91 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Выбери свой продукт</h1>
+    <ul>
+        <li>
+            <img src="images/photo 1.png" alt="Фото: увлажняющий мусс" width="290" height="245"/>
+            <span>Для нормальной кожи</span>
+            <h2>Увлажняющий мусс</h2>
+            <p>Глубоко увлажняет кожу лица, оставляя ее мякгой и гладкой</p>
+            <span>Состав:</span>
+            <ul>
+                <li>Активные натуральные компоненты</li>
+                <li>Витамины C, A, PP, B и E</li>
+                <li>Солнцезащитные компоненты</li>
+                <b>Цена:</b>
+                <span>2 750 ₽</span>
+            </ul>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <img src="images/photo 2.png" alt="Фото: увлажняющая маска" width="290" height="245" />
+            <span>Для нормальной кожи</span>
+            <h2>Увлажняющая маска</h2>
+            <p>Способствует удерживанию влаги в верхних слоях кожи.</p>
+            <span>Состав</span>
+            <ul>
+                <li>Воски</li>
+                <li>Минералы</li>
+                <li>Масла</li>
+                <b>Цена:</b>
+                <span>3 500 ₽</span>
+            </ul>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <img src="images/photo 3.png" alt="Фото: гель для умывания" width="290" height="245"/>
+            <span>Для нормальной кожи</span>
+            <h2>Гель для умывания</h2>
+            <p>Интенсивно очищает, не повреждает защитный барьер кожи.</p>
+            <span>Состав</span>
+            <ul>
+                <li>Минералы</li>
+                <li>Витамины C, A, PP, B и E</li>
+                <li>Солнцезащитные компоненты</li>
+                <b>Цена:</b>
+                <span>1 650 ₽</span>
+            </ul>
+        </li>
+    </ul>
+
+     <ul>
+        <li>
+            <img src="images/photo 4.png" alt="Фото: Подарочный набор №1" width="290" height="245"/>
+            <span>Для нормальной кожи</span>
+            <h2>Подарочный набор №1</h2>
+            <p>Набор, состоящий из увлажняющего крема и маски.</p>
+            <span>Состав:</span>
+            <ul>
+                <li>Воски</li>
+                <li>Минералы</li>
+                <li>Масла</li>
+                <b>Цена:</b>
+                <span>4 750 ₽</span>
+            </ul>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <img src="images/photo 5.png" alt="Фото: Подарочный набор №5" width="290" height="245"/>
+            <span>Для нормальной кожи</span>
+            <h2>Подарочный набор №5</h2>
+            <p>Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
+            <span>Состав:</span>
+            <ul>
+                <li>Воски</li>
+                <li>Минералы</li>
+                <li>Масла</li>
+                <b>Цена:</b>
+                <span>7 520 ₽</span>
+            </ul>
+        </li>
+    </ul>
     
 </body>
 </html>
